# pulse-blog-app

./: .env  PROJECT_ARCHITECTURE.md  README.md  check_cols.py  check_db.py  docker-compose.full.yml  docker-compose.yml  package-lock.json
.github/workflows/: deploy.yml
analytics/: .dockerignore  .gitignore  Dockerfile  OVERVIEW.md  app.py  start.sh
analytics-backend/: .gitignore  database.py  main.py  models.py  requirements.txt
analytics-backend/routers/: scrapper_analytics.py
analytics-frontend/src/: App.jsx
analytics/backend/: database.py  main.py
analytics/frontend/: package-lock.json  package.json  vite.config.js
backend/: .dockerignore  .env  .env.example  .gitignore  OVERVIEW.md  alembic.ini  dependencies.py  main.py  requirements.txt  search_trigger.sql
backend/alembic/: env.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  app_visit.py  blog_visitor.py  post.py  post_view.py  timeline_agent_config.py  timeline_comment.py  timeline_event.py  timeline_post.py  timeline_quote.py  user.py  (+1 more)
frontend/: Dockerfile  OVERVIEW.md  package-lock.json  package.json
nginx/: nginx.conf
post-service/: Dockerfile  OVERVIEW.md  requirements.txt
scrap_knowledge2/: .dockerignore  .gitignore  Dockerfile  README.md  pgvector_verification.md  pyproject.toml
scrap_knowledge2/src/blog_kb/: __init__.py  api.py  config.py  db.py  embeddings.py  pipeline.py  preprocess.py  scheduler.py  scraper.py  service.py  storage.py
scrap_knowledge2/tests/: test_api.py  test_db_persistence.py  test_preprocess.py  test_utc_dates.py
(+60 files in other folders)
