[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-kb-pipeline"
version = "0.1.0"
description = "Scraping and knowledge-base pipeline for low-latency blog generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.116",
  "feedparser>=6.0.11",
  "httpx>=0.28",
  "pydantic>=2.11",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.1",
  "requests>=2.32",
  "sqlalchemy>=2.0",
  "pgvector",
  "trafilatura>=1.9",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers",
]

[project.scripts]
blog-kb = "blog_kb.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
